# medeasy

./: .env.example  .gitignore  .windsurfrules  Dockerfile.test  LICENSE  README.md  create-github-repo.ps1  run_security_tests.ps1  session_fix.txt  setup-branch-protection.ps1
.windsurf/: context-rules.yml
.windsurf/workflows/: checkout-workflow.md  how-to-workflow.md  new-feature-complete.md  prepare-release.md  test-security.md
config/: README.md
docs/: DOCS-INDEX.md  FEATURE_STATUS.md
docs/ai-service/: README.md
docs/api/: API_CONTRACTS.md  API_REFERENCE.md  INTEGRATION_POINTS.md
docs/architecture/: AI_SERVICE.md  GRPC_IMPLEMENTATION_STATUS.md  NAMING_CONVENTIONS.md  README.md  build.md
docs/compliance/: SECURITY.md
docs/config/: README.md
docs/database/: IMPLEMENTATION.md  RELATIONSHIPS.mermaid  SCHEMA.md
docs/features/: TRANSCRIPTION.md
docs/frontend/: DATABASE_INTEGRATION.md  README.md  TESTING.md
docs/project/: PROJECT_STRUCTURE.md  checkliste.md  phase_1.md
docs/testing/: REPOSITORY_TESTING.md  SECURITY_TESTING.md
docs/ui/: DESIGN_IMPLEMENTATION_PLAN.md  DESIGN_STRATEGY.md  README.md
docs/ui/accessibility/: README.md
docs/ui/components/: README.md
docs/ui/dashboard/: NOT_USE_README.md
docs/ui/deployment/: README.md
docs/ui/routing/: README.md
docs/ui/stores/: README.md
docs/ui/styling/: README.md
docs/ui/testing/: README.md
setup/: github-cli-config.json  setup-github-cli.ps1
src/ai-service/: .env.example  README.md  medeasy_minimal_pb2.py  medeasy_pb2.py  medeasy_pb2_grpc.py  pyproject.toml  requirements.txt
src/ai-service/protos/: medeasy.proto  medeasy_minimal.proto
src/ai-service/src/: __init__.py  config.py  grpc_service.py  main.py  medeasy_minimal_pb2.py  medeasy_minimal_pb2_grpc.py  medeasy_pb2.py  medeasy_pb2_grpc.py
src/ai-service/src/anonymization/: __init__.py  pii_detector.py  rules.py
src/ai-service/src/metrics/: collector.py
src/ai-service/src/providers/: __init__.py  base_provider.py  openai_client.py
src/ai-service/src/services/: __init__.py  anonymization_service.py  grpc_service_minimal.py  whisper_service.py
src/ai-service/src/swiss/: __init__.py  dialect_detector.py
src/ai-service/src/whisper/: __init__.py  models.py  transcription.py
src/ai-service/tests/: test_anonymization.py  test_grpc_service_health.py  test_grpc_service_metrics.py  test_grpc_service_swiss_german.py  test_metrics_collector.py  test_swiss_german_detector.py
src/backend/: MedEasy.sln
src/backend/MedEasy.API/: MedEasy.API.csproj  MedEasy.API.http  Program.cs  Program.cs.reference  appsettings.Development.json  appsettings.json  medeasy.db-shm  medeasy.db-wal  medeasy_old.db
src/backend/MedEasy.API/Controllers/: AIController.cs  (+5 more)
src/backend/MedEasy.Application/: Class1.cs  MedEasy.Application.csproj
src/backend/MedEasy.Domain/: Class1.cs  MedEasy.Domain.csproj
src/backend/MedEasy.FinalSecurityTests/: Program.cs
src/backend/MedEasy.Infrastructure/: Class1.cs  MedEasy.Infrastructure.csproj
src/frontend/: .gitignore  .npmrc  COMPONENTS.md  REMAINING_ISSUES.md  ROADMAP.md  SECURITY.md  SETUP_FIXES.md  TESTING.md  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest-setup-client.ts
src/frontend-backup/src/: app.html
src/frontend/src/: app.d.ts  app.html  demo.spec.ts
src/frontend/src-tauri/: .env.development.example  .env.production.example  Cargo.toml  README.md  build.rs  tauri.conf.json
src/frontend/src-tauri/scripts/: db-helper.ps1
src/frontend/src-tauri/src/: audit.rs  commands.rs  config.rs  main.rs
src/frontend/src-tauri/src/commands/: key_management.rs  mod.rs
src/frontend/src-tauri/src/database/: audit.rs  connection.rs  encryption.rs  migrations.rs  mod.rs  models.rs  schema.rs
src/frontend/src-tauri/src/repositories/: anonymization_review_repository.rs  audit_repository.rs  mod.rs  patient_repository.rs  session_repository.rs  transcript_repository.rs
src/frontend/src-tauri/src/security/: key_manager.rs  key_manager_backup.rs
src/frontend/src-tauri/src/tests/: anonymization_review_tests.rs  audit_tests.rs  database_tests.rs  encryption_tests.rs  isolated_database_tests.rs  key_rotation_tests.rs  mod.rs  repository_tests.rs  test_helpers.rs
test-data/: mock-patients.json
tools/scripts/: check-tools.ps1
(+117 files in other folders)
