# „Der Herr, unser Gott, lasse uns freundlich ansehen. Lass unsere Arbeit nicht vergeblich sein – ja, lass gelingen, was wir tun!" Psalm 90,17

[package]
name = "medeasy"
version = "0.1.0"
description = "MedEasy - Schweizer Medizinische Software"
authors = ["MedEasy Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Datenbank [SP] SQLCipher Pflicht
rusqlite = { version = "0.30.0", features = ["bundled-sqlcipher", "chrono", "uuid"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# Verschlüsselung [EIV]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
sha2 = "0.10"
generic-array = "0.14"
regex = "1.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
